# remote_desktop_app

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: client_tls.rs  lib.rs  main.rs  message_type_handlers.rs  tcp_server.rs  window_init.rs
common/src/: message_type.rs
server/: Cargo.toml  build.rs
server/src/: lib.rs  maccapture.h  maccapture.m  main.rs  message_type_handlers.rs  sck.rs  screen_capture.rs  tcp_server.rs  tls.rs
server/src/capture/: linux.rs  mac.rs  mod.rs
