[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls = "0.23"
rustls-pemfile = "2"
common = { path = "../common" }
scrap = "0.5"
image = "0.24"
lz4_flex = "0.11"
objc = "0.2"
turbojpeg = "1.3"

[build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
xcap = "0.2"